[fix] gallery x-scrollbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,3 +24,7 @@
   padding: .5rem 0;
   font-size: xx-large;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
